logo contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,10 @@ a:not([href]):not([tabindex]) {
   width: 400px;
 }
 
+.awake > .container > .navbar-brand > img {
+ background: #000; 
+}
+
 pre,
 code,
 kbd,
